test/fail_compilation/fail216.d
// 1744

void foo() {}

int bar() {
        int x = foo();
}

const y = bar();

